<resources>
  <string name="app_name">Tabata Timer (Arduino)</string>
  <string name="select_bluetooth_device">Select Bluetooth-device</string>
  <string name="no_paired_devices_detected_title">No paired devices detected.</string>
  <string name="no_paired_devices_detected_text">Go to the Bluetooth settings and pair with the Bluetooth device. Also make sure that the Bluetooth adapter is working properly</string>
  <string name="error">It\'s not going according to plan…</string>
  <string name="connection_fail">The connection to the Bluetooth device cannot be established</string>
  <string name="okey">Okey</string>
  <string name="сycles">Cycles</string>
  <string name="sets">Sets</string>
  <string name="work">Work</string>
  <string name="rets">Rest</string>
  <string name="int_to_text">%d</string>
  <string name="rest_between_sets">Rest between sets</string>
  <string name="lets_go">Let\'s go it!</string>
  <string name="workout_setup">Workout setup</string>
  <string name="training_session_is_active">Training session is active</string>
  <string name="training_session_ended">Training session is ended</string>
  <string name="training_session_paused_by_phone">Training session paused by phone</string>
  <string name="training_session_paused_by_arduino">Training session paused by arduino</string>
  <string name="sets_cycles">Sets: %1$d / Cycles: %2$d</string>
  <string name="train_times">Work: %1$s / Rest: %2$s - %3$s</string>
  <string name="resume_training_session">Resume</string>
  <string name="pause_training_session">Pause</string>
  <string name="cancel_training">Cancel</string>
  <string name="training_session_canced">Training session canceled</string>
</resources>